bindings/swift/lib/iota_sdk_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_iota_sdk_ffi_fn_clone_faucetclient(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_iota_sdk_ffi_fn_free_faucetclient(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_faucetclient_devnet(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_faucetclient_local(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_faucetclient_new(RustBuffer faucet_url, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_faucetclient_testnet(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_iota_sdk_ffi_fn_method_faucetclient_request(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_iota_sdk_ffi_fn_method_faucetclient_request_and_wait(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_iota_sdk_ffi_fn_method_faucetclient_request_status(void*_Nonnull ptr, RustBuffer id
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_clone_graphqlclient(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_iota_sdk_ffi_fn_free_graphqlclient(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new(RustBuffer server, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new_devnet(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new_localhost(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new_mainnet(RustCallStatus *_Nonnull out_status
    
);
void*_Nonnull uniffi_iota_sdk_ffi_fn_constructor_graphqlclient_new_testnet(RustCallStatus *_Nonnull out_status
    
);